test/negative/dict_wrong_val.mut
# Negative: assign wrong type to dict value
d: Dict[str, i64] = Dict[str, i64]()
d["x"] = "hello"
